[BUG] : Lots of minor bugs corrected
[REFACTOR] : Change max execution time for scripts. Set to 10 minutes by default
[REFACTOR] : Change polymod search to add result by result return. Use POLYMOD_SEARCH_RETURN_INDIVIDUALS_OBJECTS search method with getNextResult method. This greatly improves the memory management.
[REFACTOR] : Manage alpha transparency on PNG and GIF images during image resizing
[FEATURE] : Add Google coordinates field for Polymod
[FEATURE] : Add vhost subfolder support for Automne installation
[FEATURE] : Add import/export of polymod modules structures
[FEATURE] : Add export of Automne activity logs in CSV
[FEATURE] : Add Google Chrome Frame support (via the configuration constant APPLICATION_GCF_SUPPORT) 
[FEATURE] : Add row duplication
[FEATURE] : Add codename to pages
[FEATURE] : Add auto resize on images for image and file objects

V4.0.2 (25/05/2010)
[BUG] : Corrected bugs : 269, 270, 486, 497 (see http://www.automne.ws/bug/)
[BUG] : Remove ghost groups on templates
[BUG] : Templates do a better check on usage
[BUG] : In administration, handle page links to documents or images which open directly in the current page : force open the link in a new window.
[REFACTOR] : Add draft thumbnail on page status icons
[REFACTOR] : Update phpMyAdmin to version 3.3.1
[REFACTOR] : Update ExtJS to version 3.2.0
[REFACTOR] : Add pages redirection infos in pages tree
[REFACTOR] : Interface for multi poly objects association is completely refactored
[REFACTOR] : Change parameters labels and position on image field
[FEATURE] : Add tabs menu on all tabs panels
[FEATURE] : Add labels and ids variables to object categories when using multi categories
[FEATURE] : Add cache management to all polymod blocks, plugins and rss. Add parameter cache on block tag and tag atm-cache-reference to handle this.
[FEATURE] : Add tags atm-admin, atm-noadmin, atm-edit, atm-noedit