@@ -23,15 +23,15 @@
 
 require_once(dirname(__FILE__).'/../../cms_rc_admin.php');
 
+echo "Start update of Automne database ... <br />";
+
+//START UPDATE FROM 4.0.2 TO 4.1.0
 if (!function_exists('atm_regen')) {
 	function atm_regen(){}
 }
 if (!defined('APPLICATION_CONFIG_LOADED')) {
 	define('APPLICATION_CONFIG_LOADED', true);
 }
-
-//START UPDATE FROM 4.0.2 TO 4.1.0
-echo "Update database if needed : <br />";
 
 # Change structure of some tables to add uuid data
 $sql = "show columns from mod_object_definition";
@@ -49,8 +49,6 @@ if (!$installed) {
 	} else {
 		echo 'Error during database update ! Script '.PATH_REALROOT_FS.'/sql/updates/v402-to-v410.sql must be executed manualy<br/>';
 	}
-} else {
-	echo 'Database already up to date (uuid) ... skipping<br/>';
 }
 # Change structure of base datas tables to add codename data
 $sql = "show columns from pagesBaseData_public";
@@ -68,8 +66,6 @@ if (!$installed) {
 	} else {
 		echo 'Error during database update ! Script '.PATH_REALROOT_FS.'/sql/updates/v402-to-v410-2.sql must be executed manualy<br/>';
 	}
-} else {
-	echo 'Database already up to date (pages codename) ... skipping<br/>';
 }
 # Change structure of website table to add codename data
 $sql = "show columns from websites";
@@ -87,12 +83,26 @@ if (!$installed) {
 	} else {
 		echo 'Error during database update ! Script '.PATH_REALROOT_FS.'/sql/updates/v402-to-v410-3.sql must be executed manualy<br/>';
 	}
-} else {
-	echo 'Database already up to date (website codename) ... skipping<br/>';
 }
 //END UPDATE FROM 4.0.2 TO 4.1.0
 
+echo "Automne database updated.<br /><br />";
+
+//Update Automne messages
+$files = glob(PATH_REALROOT_FS."/sql/messages/*/*.sql", GLOB_NOSORT);
+if (is_array($files)) {
+	echo "Start update Automne messages ...<br />";
+	foreach($files as $file) {
+		if (file_exists($file) && CMS_patch::executeSqlScript($file, true)) {
+			CMS_patch::executeSqlScript($file);
+		} else {
+			echo 'Error during database update ! Script '.$file.' must be executed manualy<br/>';
+		}
+	}
+	echo "Automne messages updated.<br /><br />";
+}
 //clear caches
+echo "Clean Automne cache.<br /><br />";
 CMS_cache::clearTypeCache('polymod');
 CMS_cache::clearTypeCache('text/javascript');
 CMS_cache::clearTypeCache('text/css');
@@ -103,6 +113,6 @@ if ($return = @file_get_contents(CMS_websitesCatalog::getMainURL().PATH_ADMIN_MO
 	echo '<a href="'.CMS_websitesCatalog::getMainURL().PATH_ADMIN_MODULES_WR.'/polymod/update-definitions.php" class="admin" target="_blank">/!\ Please click this link to finalise Automne update /!\</a><br />';
 }
 //regenerate pages
-echo "<br />Pages regeneration is launched<br />";
+echo "<br />Launch pages regeneration.<br />";
 CMS_tree::regenerateAllPages(true);
 ?>
