@@ -3,6 +3,7 @@ V4.1.0 (in progress)
 [REFACTOR] : Change max execution time for scripts. Set to 10 minutes by default
 [REFACTOR] : Change polymod search to add result by result return. Use POLYMOD_SEARCH_RETURN_INDIVIDUALS_OBJECTS search method with getNextResult method. This greatly improves the memory management.
 [REFACTOR] : Manage alpha transparency on PNG and GIF images during image resizing
+[REFACTOR] : Move /automne_linx_files to /automne/linx
 [FEATURE] : Add Google coordinates field for Polymod
 [FEATURE] : Add vhost subfolder support for Automne installation
 [FEATURE] : Add import/export of polymod modules structures
@@ -10,6 +11,7 @@ V4.1.0 (in progress)
 [FEATURE] : Add Google Chrome Frame support (via the configuration constant APPLICATION_GCF_SUPPORT) 
 [FEATURE] : Add row duplication
 [FEATURE] : Add codename to pages
+[FEATURE] : Add database auto update
 [FEATURE] : Add auto resize on images for image and file objects
 
 V4.0.2 (25/05/2010)
